--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.0.4",
     "@angular/material-moment-adapter": "^16.0.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0",
     "ngx-toastr": "^17.0.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
