--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngrx/effects": "^16.0.1",
+    "@ngrx/entity": "^16.0.1",
+    "@ngrx/store": "^16.0.1",
+    "@ngrx/store-devtools": "^16.0.1",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "ngx-toastr": "^17.0.2",
