--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ngrx/entity": "^16.0.1",
     "@ngrx/store": "^16.0.1",
     "@ngrx/store-devtools": "^16.0.1",
+    "@redux-devtools/instrument": "^2.1.0",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1",
+    "redux": "^4.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
